Refactor: Replace `ENTRY`/`EXIT`/`RISK` StrategyType enums with `DIRECTIONAL`. Update associated code, documentation, and behavior for consistent directional strategy handling.